--- a/data/config
+++ b/data/config
@@ -19,6 +19,8 @@
 #bind super+Return spawn urxvt
 #bind super+b toggle_bar 
 #bind super+t toggle_float 
+#bind super+j select next
+#bind super+k select prev
 #bind super+1 set_tag 1
 #bind super+2 set_tag 2
 #bind super+3 set_tag 3
