Changed 'tag' terminology to 'workspace / ws'

--- a/data/config
+++ b/data/config
@@ -21,15 +21,15 @@
 #bind super+t toggle_float 
 #bind super+j select next
 #bind super+k select prev
-#bind super+1 set_tag 1
-#bind super+2 set_tag 2
-#bind super+3 set_tag 3
-#bind super+4 set_tag 4
-#bind super+5 set_tag 5
-#bind super+6 set_tag 6
-#bind super+7 set_tag 7
-#bind super+8 set_tag 8
-#bind super+9 set_tag 9
+#bind super+1 set_ws 1
+#bind super+2 set_ws 2
+#bind super+3 set_ws 3
+#bind super+4 set_ws 4
+#bind super+5 set_ws 5
+#bind super+6 set_ws 6
+#bind super+7 set_ws 7
+#bind super+8 set_ws 8
+#bind super+9 set_ws 9
 #bind super+shift+1 move_window 1
 #bind super+shift+2 move_window 2
 #bind super+shift+3 move_window 3
