--- a/utils/Makefile
+++ b/utils/Makefile
@@ -3,4 +3,4 @@ all: generate-config
 generate-config: generate-config.c ../src/keys.c ../src/utils.c \
 	../src/settings.c ../src/colors.c
 	cc generate-config.c -o generate-config -I ../src/ ../src/keys.c \
-		../src/utils.c ../src/settings.c ../src/colors.c -lX11 -lconfig
+		../src/rules.c ../src/utils.c ../src/settings.c ../src/colors.c -lX11 -lconfig
