--- a/src/Makefile
+++ b/src/Makefile
@@ -3,10 +3,10 @@ include config.mk
 SRC = dawm.h main.c atoms.c bar.c client.c colors.c cursors.c ewmh.c keys.c \
       monitor.c rules.c settings.c sysinfo.c utils.c wm.c xutils.c layouts.c \
       x11.c
-HEADERS = dawm.h
+HEADERS = dawm.h version.h
 OBJ = ${SRC:.c=.o}
 
-all: options version.h dawm
+all: options version dawm
 
 options:
 	@echo dawm build options:
@@ -26,14 +26,10 @@ dawm: ${OBJ}
 
 clean:
 	@echo cleaning directory
-	@rm -f *.o dawm
+	@rm -f *.o dawm version.h .version.h
 
-version.h:
-	@echo "#ifndef _VERSION_H_" >  version.h
-	@echo "#define _VERSION_H_" >> version.h
-	@echo -n "#define VERSION \"" >> version.h
-	@git show -s --pretty=format:"commit %h (%ai)\"%n" >> version.h
-	@echo "#endif" >> version.h
+version:
+	@sh generate-version.sh
 
 test:
 	@xinit ./dawm-test -- :1
